Fix <details> UI bug in dark mode

--- a/src/global.css
+++ b/src/global.css
@@ -1,7 +1,3 @@
-body.dark #app-nav{
-	background-color: hsla(0,0%,15%,1.00);
-}
-
 body {
 	background-color: hsla(0,0%,99%,1.00);
 }
@@ -53,4 +49,13 @@ select{
 	font-family: Lexend Deca, sans-serif;
 	font-size: 23px;
 	margin-bottom: 8px;
+}
+
+body.dark details{
+	border: white solid;
+	border-radius: 7px;
+	box-shadow: 0px 0px 7px #898989;
+}
+body.dark details[open] summary{
+	border-bottom: white solid;
 }
